--- a/package.yaml
+++ b/package.yaml
@@ -25,9 +25,9 @@ dependencies:
   - base                          >= 4.7 && < 5
   - mtl                            >= 2.2.2 && < 2.3
   - containers                 >= 0.6.7 && < 0.7
-  - optparse-applicative >= 0.18.1 && < 0.19
+  - optparse-applicative 
   - timeit                        >= 2.0 && < 2.1
-  - Flint2                        >= 0.1.0.4 && < 0.2.0.0
+  - Flint3                        
       
 executables:
   bernoulli:
