--- a/stack.yaml
+++ b/stack.yaml
@@ -70,4 +70,4 @@ packages:
 extra-deps:
 - git: https://github.com/hpacheco/gloss-juicy.git
   commit: acbdfd864b7e574dfbe1595fbdcd154563b2a0ef
-- ../Flint3
+- ../Extension/Flint3
